--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <p align="center">
-        <img border="0" src="https://cdn.discordapp.com/icons/1193499694337364008/63c79c1d114e3d667c6f00b5a6d8a80f.png?size=1024" width="device-width" height="200">
+        <img border="0" src="https://cdn.discordapp.com/icons/1054463430544855100/a_476877c409988b103922f0701d82a53f.gif?size=1024" width="device-width" height="200">
     </p>
    
 
