--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  
 <script>
     var names = [
-        { name: "[ MR_ELHOSIENY ]", color: "red" },
+        { name: "[ Witcher ]", color: "red" },
 
 
     ];
